--- a/src/app/(components)/(Navbar)/Navbar.css
+++ b/src/app/(components)/(Navbar)/Navbar.css
@@ -45,7 +45,7 @@ img.logo {
     width: 145px;
     padding: 0.5em 1em;
     position: absolute;
-    top: 4em;
+    top: 57%;
     background: white;
 }
 
