--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,6 +23,11 @@ a {
   color: inherit;
   text-decoration: none;
   cursor: pointer;
+  transition: 0.5s;
+}
+
+a:hover {
+  filter: brightness(0.7);
 }
 
 main {
