--- a/src/app/(components)/(Home)/Home.css
+++ b/src/app/(components)/(Home)/Home.css
@@ -38,9 +38,9 @@
 }
 
 .component-header h2 {
-    font-family: Poppins;
-    font-size: 35px;
+    font-size: 30px;
     text-transform: uppercase;
+    font-weight: 700;
 }
 
 .component-description {
@@ -87,10 +87,10 @@
 }
 
 .tour-name p {
-    font-family: Poppins;
     text-transform: uppercase;
-    font-size: 20px;
+    font-size: 18px;
     text-align: center;
+    font-weight: 700;
 }
 
 .tour-description {
