removed duplicate Tours link menu and added more gap between each dropdown menu option

--- a/src/app/(components)/(Navbar)/Navbar.css
+++ b/src/app/(components)/(Navbar)/Navbar.css
@@ -37,7 +37,7 @@ img.logo {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    gap: .5em;
+    gap: 1em;
 }
 
 .dropdown-menu-body {
