--- a/src/app/(components)/(Home)/Home.css
+++ b/src/app/(components)/(Home)/Home.css
@@ -26,7 +26,7 @@
 }
 
 .home-component-2 {
-    background: hsla( 45,11.76%,86.67% ,1);
+    background: var(--secondary-color);
 }
 
 .home-component-2 .container {
@@ -118,12 +118,73 @@
     font-weight: 500;
     font-size: 20px;
     gap: 1em;
-}
-
-.tour-button a.primary-color {
     background: var(--primary-color);
 }
 
-.tour-button a.secondary-color {
-    background: var(--secondary-color);
+.home-component-3 {
+    background: var(--tertiary-color);
+}
+
+.home-component-3 .container {
+    display: flex;
+    flex-direction: column;
+    max-width: 1100px;
+    gap: 1em;
+}
+
+.home-component-3 .container .container-row {
+    display: flex;
+    width: 100%;
+    height: 50%;
+    gap: 1em;
+}
+
+.home-component-3 .container .container-row .container-cell {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    height: 100%;
+}
+
+.cell-details {
+    background: var(--primary-color);
+    color: white;
+    height: 112px;
+    padding: .5em 0 0 .8em;
+}
+
+.cell-title p {
+    font-weight: 600;
+}
+
+.cell-image {
+    width: 100%;
+    height: 300px;
+}
+
+.cell-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.main-cell .component-description p {
+    text-align: left;
+    width: 90%;
+}
+
+.cell-description p {
+    font-size: 15px;
+}
+
+.main-cell .component-header h2 {
+    font-size: 50px;
+    width: 80%;
+}
+
+.container-cell.main-cell {
+    gap: 1em;
+    border: 5px solid var(--primary-color);
+    padding: 1em;
+    border-radius: 16px;
 }
