added icons to navigation

--- a/src/app/(components)/(Navbar)/Navbar.css
+++ b/src/app/(components)/(Navbar)/Navbar.css
@@ -21,6 +21,10 @@ img.logo {
 .links a {
     font-weight: 200;
     font-size: 18px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: .5em;
 }
 
 .links .dropdow-menu {
