--- a/src/app/(components)/(Home)/Home.css
+++ b/src/app/(components)/(Home)/Home.css
@@ -26,7 +26,7 @@
 }
 
 .home-component-2 {
-    background: var(--secondary-color);
+    background: var(--tertiary-color);
 }
 
 .home-component-2 .container {
@@ -118,11 +118,11 @@
     font-weight: 500;
     font-size: 20px;
     gap: 1em;
-    background: var(--primary-color);
+    background: var(--secondary-color);
 }
 
 .home-component-3 {
-    background: var(--tertiary-color);
+    background: white;
 }
 
 .home-component-3 .container {
@@ -146,17 +146,6 @@
     height: 100%;
 }
 
-.cell-details {
-    background: var(--primary-color);
-    color: white;
-    height: 112px;
-    padding: .5em 0 0 .8em;
-}
-
-.cell-title p {
-    font-weight: 600;
-}
-
 .cell-image {
     width: 100%;
     height: 300px;
@@ -168,15 +157,6 @@
     object-fit: cover;
 }
 
-.main-cell .component-description p {
-    text-align: left;
-    width: 90%;
-}
-
-.cell-description p {
-    font-size: 15px;
-}
-
 .main-cell .component-header h2 {
     font-size: 50px;
     width: 80%;
@@ -184,7 +164,20 @@
 
 .container-cell.main-cell {
     gap: 1em;
-    border: 5px solid var(--primary-color);
     padding: 1em;
-    border-radius: 16px;
+}
+
+.cell-description {
+    background: var(--primary-color);
+    padding: .5em 1em;
+}
+
+.cell-description p {
+    color: white;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+
+.container-cell .component-description p {
+    text-align: left;
 }
