changed tour buttons color to green

--- a/src/app/(components)/(Home)/Home.css
+++ b/src/app/(components)/(Home)/Home.css
@@ -118,7 +118,7 @@
     font-weight: 500;
     font-size: 20px;
     gap: 1em;
-    background: var(--secondary-color);
+    background: var(--primary-color);
 }
 
 .home-component-3 {
