--- a/src/app/(components)/(Home)/Home.css
+++ b/src/app/(components)/(Home)/Home.css
@@ -229,3 +229,63 @@
     display: none;
     transition: 0.5s;
 }
+
+.home-component-4 {
+    background: var(--tertiary-color);
+}
+
+.home-component-4 .container {
+    display: flex;
+    align-items: center;
+}
+
+.park-location {
+    width: 700px;
+    height: 600px;
+    position: relative;
+    left: 50px;
+}
+
+.park-location img {
+    width: 100%;
+    height: 100%;
+}
+
+.how-to-get-there {
+    background: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 450px;
+    width: 475px;
+    border-radius: 20px;
+    font-size: 18px;
+    gap: 1em;
+    padding: 2em;
+    text-align: center;
+    position: relative;
+    right: 50px;
+}
+
+.how-to-get-there i.how-to-get-there-icon {
+    font-size: 2em;
+    color: var(--primary-color);
+}
+
+p.park-name {
+    color: var(--primary-color);
+    font-weight: 500;
+    font-size: 20px;
+}
+
+h2.getting-there {
+    font-size: 30px;
+    font-weight: 800;
+}
+
+p.get-directions-button {
+    cursor: pointer;
+    color: var(--secondary-color);
+    font-weight: 500;
+}
