--- a/src/app/(components)/(Home)/Home.css
+++ b/src/app/(components)/(Home)/Home.css
@@ -289,3 +289,66 @@ p.get-directions-button {
     color: var(--secondary-color);
     font-weight: 500;
 }
+
+.home-component-5 {
+    height: 600px;
+}
+
+.home-component-5 .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2em;
+    max-width: 600px;
+}
+
+.email-icon {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: var(--primary-color);
+    font-weight: 500;
+}
+
+.email-icon p {
+    font-size: 30px;
+}
+
+.email-icon i {
+    font-size: 60px;
+}
+
+.sign-up-text h2 {
+    font-size: 40px;
+    text-align: center;
+}
+
+.sign-up-form {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+}
+
+.sign-up-form input {
+    width: 85%;
+    height: 100%;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+    padding: 1em;
+}
+
+.sign-up-form button {
+    width: 15%;
+    height: 100%;
+    background: var(--primary-color);
+    color: white;
+    text-transform: uppercase;
+    border: none;
+    font-size: 16px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+}
