--- a/src/app/(components)/(Home)/Home.css
+++ b/src/app/(components)/(Home)/Home.css
@@ -310,6 +310,7 @@ p.get-directions-button {
     align-items: center;
     color: var(--primary-color);
     font-weight: 500;
+    gap: 1em;
 }
 
 .email-icon p {
