--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,7 @@
   --primary-color: #689941;
   --secondary-color: #F58422;
   --tertiary-color: hsla( 45,11.76%,86.67% ,1);
+  --fourth-color: #E7CE1F;
 }
 
 * {
