--- a/src/app/(components)/(Footer)/Footer.css
+++ b/src/app/(components)/(Footer)/Footer.css
@@ -2,8 +2,9 @@ footer {
     background: var(--primary-color);
     padding: 2em 5em;
     display: flex;
-    flex-direction: column;
-    gap: 5em;
+    justify-content: center;
+    align-items: center;
+    gap: 2em;
 }
 
 .footer-logo img {
@@ -15,7 +16,7 @@ footer {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 2em;
+    gap: 1em;
 }
 
 .footer-row {
@@ -24,6 +25,6 @@ footer {
     align-items: center;
     color: white;
     font-weight: 500;
-    gap: 5em;
+    gap: 4em;
     font-size: 18px;
 }
