--- a/src/app/(components)/(Home)/Home.css
+++ b/src/app/(components)/(Home)/Home.css
@@ -64,7 +64,7 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    width: 40%;
+    width: 30%;
     background: white;
     padding: 15px;
     height: 100%;
@@ -181,6 +181,7 @@
 
 .container-cell .component-description p {
     text-align: left;
+    line-height: 2em;
 }
 
 .cell-2 .cell-image {
