--- a/src/app/(components)/(Navbar)/Navbar.css
+++ b/src/app/(components)/(Navbar)/Navbar.css
@@ -63,7 +63,7 @@ img.logo {
     display: flex;
 }
 
-.dropdown-option button {
+.dropdown-option a {
     background: transparent;
     border: none;
     font-size: 16px;
