--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,7 @@
   --secondary-color: #F58422;
   --tertiary-color: hsla( 45,11.76%,86.67% ,1);
   --fourth-color: #E7CE1F;
+  --fifth-color: #554434;
 }
 
 * {
