--- a/src/app/contact-us/lets-connect/LetsConnect.css
+++ b/src/app/contact-us/lets-connect/LetsConnect.css
@@ -100,6 +100,7 @@ section.lets-connect-header h2 {
     align-items: flex-start;
     justify-content: center;
     gap: .5em;
+    margin-top: 0;
 }
 
 .social-media-links {
@@ -118,4 +119,10 @@ section.lets-connect-header h2 {
     justify-content: center;
     align-items: center;
     gap: 2em;
+}
+
+.contact-us-info a {
+    color: var(--primary-color);
+    font-weight: 500;
+    text-decoration: underline;
 }
