added tickets page

--- a/src/app/(components)/(Home)/Home.css
+++ b/src/app/(components)/(Home)/Home.css
@@ -97,9 +97,10 @@
 .tour-description {
     display: flex;
     flex-direction: column;
+    gap: 1em;
 }
 
-.tour-description p {
+.tour-description .text-align-justify {
     text-align: justify;
 }
 
