--- a/src/app/(components)/(Footer)/Footer.css
+++ b/src/app/(components)/(Footer)/Footer.css
@@ -26,5 +26,9 @@ footer {
     color: white;
     font-weight: 500;
     gap: 4em;
-    font-size: 18px;
+    font-size: 17px;
+}
+
+.footer-row a {
+    text-align: center;
 }
