--- a/src/app/(components)/(Home)/Home.css
+++ b/src/app/(components)/(Home)/Home.css
@@ -123,6 +123,28 @@
     flex-direction: column;
 }
 
+.tour-button button {
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: black;
+    text-transform: uppercase;
+    font-weight: 500;
+    font-size: 20px;
+    gap: .5em;
+    background: var(--fourth-color);
+    flex-direction: column;
+    border: none;
+    font-family: 'Montserrat', sans-serif;
+    transition: .5s;
+}
+
+.tour-button button:hover {
+    filter: brightness(0.7);
+}
+
 .tour-footer {
     width: 100%;
     display: flex;
