--- a/src/app/(components)/(Footer)/Footer.css
+++ b/src/app/(components)/(Footer)/Footer.css
@@ -5,6 +5,7 @@ footer {
     justify-content: center;
     align-items: center;
     gap: 2em;
+    flex-direction: column;
 }
 
 .footer-logo img {
@@ -31,4 +32,22 @@ footer {
 
 .footer-row a {
     text-align: center;
+}
+
+.contact-us-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: .5em;
+}
+
+.contact-us-info a {
+    font-weight: 500;
+    text-decoration: underline;
+}
+
+.footer-logo {
+    display: flex;
+    gap: 1em;
 }
