fixed footer and lets connect address

--- a/src/app/(components)/(Footer)/Footer.css
+++ b/src/app/(components)/(Footer)/Footer.css
@@ -34,7 +34,7 @@ footer {
     text-align: center;
 }
 
-.contact-us-info {
+.footer-logo .contact-us-info {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -43,12 +43,12 @@ footer {
     color: white;
 }
 
-.contact-us-info a {
+.footer-logo .contact-us-info a {
     font-weight: 500;
     text-decoration: underline;
 }
 
 .footer-logo {
     display: flex;
-    gap: 1em;
+    gap: 5em;
 }
