--- a/src/app/contact-us/job-application/JobApplication.css
+++ b/src/app/contact-us/job-application/JobApplication.css
@@ -24,3 +24,9 @@ section.job-application-header h2 {
     text-transform: uppercase;
     font-weight: 600;
 }
+
+@media screen and (max-width: 1200px) {
+    .job-application-description {
+        width: 400px;
+    }
+}
