--- a/src/app/contact-us/volunteer-application/VolunteerApplication.css
+++ b/src/app/contact-us/volunteer-application/VolunteerApplication.css
@@ -25,3 +25,9 @@ section.volunteer-application-header h2 {
     text-transform: uppercase;
     font-weight: 600;
 }
+
+@media screen and (max-width: 1200px) {
+    .volunteer-application-description {
+        width: 400px;
+    }
+}
