--- a/src/app/(components)/(Navbar)/Navbar.css
+++ b/src/app/(components)/(Navbar)/Navbar.css
@@ -79,27 +79,18 @@ img.logo {
     font-size: 2em;
 }
 
-.hamburger-menu-background {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 100vw;
-    height: 5000px;
-    background-color: rgba(0, 0, 0, 0.447);
-}
-
 .hamburger-menu-body {
     position: absolute;
-    top: 0;
-    right: 0;
-    width: 400px;
+    top: 100px;
+    left: 0;
+    width: 100%;
+    height: -moz-fit-content;
     height: fit-content;
     background-color: white;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-end;
-    border-radius: 0 0 0 30px;
 }
 
 .hamburger-menu-item-container {
@@ -110,25 +101,51 @@ img.logo {
     padding: .8em 1em;
 }
 
-.hamburger-menu-item-container:nth-child(odd) {
-    background-color: white;
+.hamburger-menu-item-container.hamburger-dropdown {
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: flex-start;
+    padding: 0;
 }
 
-.hamburger-menu-item-container:nth-child(even) {
-    background-color: rgba(0, 0, 0, 0.112);
+.hamburger-dropdown-options {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: flex-start;
+    width: 100%;
+    background: var(--tertiary-color);
 }
 
-.hamburger-menu-item-container:last-child {
-    border-radius: 0 0 0 30px;
+.hamburger-dropdown-options a {
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+    padding: 1em;
+    border-top: 1px solid #0000004a;
 }
 
-.title-only {
-    font-size: 20px;
-    font-style: italic;
+.hamburger-menu-item-container:first-child {
+    border-top: 1px solid #0000004a;
 }
 
-.hamburger-menu-item {
-    font-size: 2em;
+.hamburger-menu-item-container {
+    border-bottom: 1px solid #0000004a;
+}
+
+.hamburger-dropdown-title {
+    width: 100%;
+    padding: 1em;
+    font-size: 18px;
+    font-weight: 200;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: .5em;
+}
+
+.hamburger-dropdown-title i {
+    font-weight: 200;
 }
 
 @media screen and (min-width: 1201px) {
