--- a/src/app/(components)/(Navbar)/Navbar.css
+++ b/src/app/(components)/(Navbar)/Navbar.css
@@ -96,9 +96,14 @@ img.logo {
 .hamburger-menu-item-container {
     width: 100%;
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
     align-items: center;
     padding: .8em 1em;
+    border-bottom: 1px solid #0000004a;
+}
+
+.hamburger-menu-item-container:first-child {
+    border-top: 1px solid #0000004a;
 }
 
 .hamburger-menu-item-container.hamburger-dropdown {
@@ -119,33 +124,23 @@ img.logo {
 
 .hamburger-dropdown-options a {
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
     width: 100%;
-    padding: 1em;
+    padding: 1em 1em 1em 2em;
     border-top: 1px solid #0000004a;
-}
-
-.hamburger-menu-item-container:first-child {
-    border-top: 1px solid #0000004a;
-}
-
-.hamburger-menu-item-container {
-    border-bottom: 1px solid #0000004a;
 }
 
 .hamburger-dropdown-title {
     width: 100%;
     padding: 1em;
-    font-size: 18px;
     font-weight: 200;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
-    gap: .5em;
 }
 
-.hamburger-dropdown-title i {
-    font-weight: 200;
+.hamburger-menu-item.hamburger-dropdown-title > * {
+    font-size: 1em;
 }
 
 @media screen and (min-width: 1201px) {
@@ -157,5 +152,9 @@ img.logo {
 @media screen and (max-width: 1200px) {
     .Large {
         display: none !important;
+    }
+
+    .links a {
+        font-size: 1em;
     }
 }
