--- a/src/app/contact-us/internship-application/InternshipApplication.css
+++ b/src/app/contact-us/internship-application/InternshipApplication.css
@@ -2,6 +2,7 @@
     background: var(--fifth-color);
     padding: 4em;
     color: white;
+    width: 130%;
 }
 
 section.internship-application-header h2 {
