fixed events page

--- a/src/app/events/Events.css
+++ b/src/app/events/Events.css
@@ -18,7 +18,7 @@ section.events-header h2 {
 }
 
 .events-details {
-    padding: 0 0 3em 3em;
+    padding: 2em 3em;
     width: 50%;
     display: flex;
     flex-direction: column;
