fixed tour 4 styling

--- a/src/app/(components)/(Home)/Home.css
+++ b/src/app/(components)/(Home)/Home.css
@@ -30,7 +30,7 @@
 }
 
 .home-component-2 .container {
-    max-width: 1248px;
+    /* max-width: 1248px; */
     display: flex;
     flex-direction: column;
     gap: 2em;
