added some styling and animation to navbar buttons

--- a/src/app/(components)/(Navbar)/Navbar.css
+++ b/src/app/(components)/(Navbar)/Navbar.css
@@ -192,18 +192,44 @@ img.logo {
     left: 0;
     top: 75px;
     width: 100%;
-    height: 300px;
+    height: 200px;
     justify-content: space-evenly;
     align-items: center;
     cursor: default;
+    padding-top: 40px;
 }
 
 .big-dropdown-option {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     gap: 10px;
     max-width: 320px;
+    height: 120px;
+    transition: .5s;
+    padding: 10px;
+    cursor: pointer;
+    border: 2px solid transparent;
+}
+
+.big-option-1:hover {
+    border: 2px solid var(--primary-color);
+    box-shadow: var(--primary-color) 10px 10px;
+}
+
+.big-option-2:hover {
+    border: 2px solid var(--secondary-color);
+    box-shadow: var(--secondary-color) 10px 10px;
+}
+
+.big-option-3:hover {
+    border: 2px solid var(--fourth-color);
+    box-shadow: var(--fourth-color) 10px 10px;
+}
+
+.big-option-4:hover {
+    border: 2px solid var(--fifth-color);
+    box-shadow: var(--fifth-color) 10px 10px;
 }
 
 .big-dropdown-option i {
@@ -275,6 +301,9 @@ img.logo {
     cursor: pointer;
     width: 100%;
     text-align: left;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
 }
 
 .big-dropdown-option-content {
