--- a/src/app/(components)/(Navbar)/Navbar.css
+++ b/src/app/(components)/(Navbar)/Navbar.css
@@ -336,6 +336,7 @@ img.logo {
     .mobile-big-dropdown-menu-body {
         display: grid;
         grid-template-columns: 1fr 1fr;
+        gap: 10px;
     }
 }
 
