--- a/src/app/about/About.css
+++ b/src/app/about/About.css
@@ -19,7 +19,7 @@ section.about h2 {
     background-color: var(--fourth-color);
 }
 
-.animals-and-plants-header {
+.our-animals-header {
     background-color: var(--fifth-color);
     color: white;
 }
@@ -39,9 +39,74 @@ p.indent {
     padding-left: 2em;
 }
 
+.team-member {
+    width: 200px;
+}
+
+.employee-img {
+    width: 100%;
+    height: 200px;
+    border-radius: 15px;
+}
+
+.our-team .about-content {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.animal-container {
+    width: 200px;
+    margin-bottom: -30px;
+}
+
+p.animal-name {
+    font-weight: 600;
+}
+
+.animal-img {
+    width: 100%;
+    height: 200px;
+    filter: brightness(0.9);
+    transition: .5s;
+}
+
+.animal-img:hover {
+    filter: brightness(0.7);
+}
+
+.our-animals .about-content {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+p.animal-name {
+    font-weight: 600;
+}
+
+.animal-info {
+    color: white;
+    position: relative;
+    bottom: 55px;
+    left: 15px;
+}
+
 @media screen and (max-width: 1200px) {
     .about-body {
         width: 400px;
+    }
+
+    .our-team .about-body {
+        width: 100%;
+    }
+
+    .our-animals .about-body {
+        width: 100%;
     }
 
     p.indent {
