fixed hamburger menu zindex bug:

--- a/src/app/(components)/(Navbar)/Navbar.css
+++ b/src/app/(components)/(Navbar)/Navbar.css
@@ -108,6 +108,7 @@ img.logo {
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-end;
+    z-index: 1;
 }
 
 .hamburger-menu-item-container {
