--- a/src/app/(components)/(Navbar)/Navbar.css
+++ b/src/app/(components)/(Navbar)/Navbar.css
@@ -66,7 +66,7 @@ img.logo {
     width: 145px;
     padding: 0.5em 1em;
     position: absolute;
-    top: 59%;
+    top: 60%;
     background: white;
     flex-direction: column;
     gap: .5em;
@@ -134,13 +134,14 @@ img.logo {
 .hamburger-dropdown-options {
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
-    justify-content: flex-start;
+    align-items: flex-start;
+    justify-content: center;
     width: 100%;
-    background: var(--tertiary-color);
+    background: white;
+    font-weight: 200;
 }
 
-.hamburger-dropdown-options a {
+.hamburger-dropdown-options div {
     display: flex;
     justify-content: flex-start;
     width: 100%;
@@ -153,8 +154,9 @@ img.logo {
     padding: 1em;
     font-weight: 200;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
+    gap: 10px;
 }
 
 .hamburger-menu-item.hamburger-dropdown-title > * {
