added styling to tours

--- a/src/app/(components)/(Home)/Home.css
+++ b/src/app/(components)/(Home)/Home.css
@@ -33,7 +33,7 @@
     /* max-width: 1248px; */
     display: flex;
     flex-direction: column;
-    gap: 2em;
+    gap: 1em;
     align-items: center;
 }
 
@@ -70,6 +70,7 @@
     height: 100%;
     gap: 1em;
     border-radius: 10px;
+    box-shadow: #0000003d 0px 0px 20px;
 }
 
 .tour-body {
@@ -500,6 +501,11 @@ h2.getting-there {
 
     .component-header {
         text-align: center;
+        padding: 1em;
+    }
+
+    .component-description {
+        padding: 0 2em;
     }
 
     .component-description p {
@@ -511,6 +517,7 @@ h2.getting-there {
         /* flex-direction: column; */
         overflow-x: scroll;
         justify-content: flex-start;
+        padding: 2em;
     }
 
     .tour-container {
@@ -585,5 +592,9 @@ h2.getting-there {
 
     .sign-up-text h2 {
         font-size: 27px;
+    }
+
+    .home-component-2 {
+        padding: 0;
     }
 }
