--- a/src/app/(components)/(Home)/Home.css
+++ b/src/app/(components)/(Home)/Home.css
@@ -52,11 +52,11 @@
 }
 
 .tours-list {
+    overflow-x: scroll;
+    justify-content: flex-start;
+    padding: 2em;
+    gap: 1em;
     display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    gap: 3em;
-    height: fit-content;
 }
 
 .tour-container {
@@ -64,7 +64,7 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    width: 30%;
+    width: 300px;
     background: white;
     padding: 15px;
     height: 100%;
@@ -514,7 +514,6 @@ h2.getting-there {
 
     .tours-list {
         width: 100%;
-        /* flex-direction: column; */
         overflow-x: scroll;
         justify-content: flex-start;
         padding: 2em;
