--- a/src/app/tickets/Tickets.css
+++ b/src/app/tickets/Tickets.css
@@ -7,3 +7,11 @@
 section.tickets-header h2 {
     font-size: 30px;
 }
+
+.tickets .tours-list {
+    width: 80%;
+}
+
+.tickets .tour-container {
+    min-width: 25%;
+}
